--- a/examples/toolbar/css/menuButton.css
+++ b/examples/toolbar/css/menuButton.css
@@ -1,32 +1,13 @@
-button {
-  cursor: pointer;
-  font-size: 110%;
+[role='toolbar'] .menu-wrapper {
+  position: relative;
 }
 
-.menu-wrapper {
-  position: relative;
-  display: inline-block;
-  font-size: 16px;
-}
-.menu-button{
-  width:7.5em;
-  padding-right: 0.25em;
-  position: relative;
-  margin-right:0 !important;
-}
-.menu-button::after {
-	content: " ";
-	border-left: 0.4em solid transparent;
-	border-right: 0.4em solid transparent;
-	border-top: 0.4em solid black;
-	position: absolute;
-	right: 1em;
-	top: 1.1em;
-}
-.menu-button:focus:after {
-	color: white;
-}
-ul[role="menu"] {
+[role='toolbar'] [role="menu"] {
+  padding: 0;
+  width: 9.5em;
+  border: thin solid black;
+  background-color: white;
+
   display: none;
   position: absolute;
   margin: 0;
@@ -34,24 +15,23 @@ ul[role="menu"] {
   z-index: 1;
 }
 
-ul[role="menu"] li, ul[role='toolbar'] li{
+[role='toolbar'] [role="menu"] li {
   list-style: none;
 }
 
-[role="menu"] {
-  padding: 0;
-  width: 9.5em;
-  border: thin solid black;
-  border-radius:5px;
-  background-color: white;
-}
-[role="menuitem"] {
+[role='toolbar'] [role="menu"] [role="menuitem"] {
   padding: 0.25em;
   outline:0;
-  border-radius: 5px;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
 }
 
-[role="menuitem"]:focus,
-[role="menuitem"]:hover {
+[role='toolbar'] [role="menu"] [role="menuitem"]:focus,
+[role='toolbar'] [role="menu"] [role="menuitem"]:hover {
 	background:rgb(226, 239, 255);
 }
+
+[role='toolbar'] [role="menu"] [role="menuitem"]:focus {
+  border-color: black;
+}
+
