--- a/examples/toolbar/css/menuButton.css
+++ b/examples/toolbar/css/menuButton.css
@@ -5,7 +5,8 @@
 [role='toolbar'] [role="menu"] {
   padding: 0;
   width: 9.5em;
-  border: thin solid black;
+  border: 2px solid #DDD;
+  border-radius:5px;
   background-color: white;
 
   display: none;
@@ -13,6 +14,10 @@
   margin: 0;
   padding: 0;
   z-index: 1;
+}
+
+[role='toolbar'] [role="menu"].focus {
+  border-color: #005A9C;
 }
 
 [role='toolbar'] [role="menu"] li {
@@ -26,12 +31,22 @@
   border-bottom: 1px solid transparent;
 }
 
+[role='toolbar'] [role="menu"] [role="menuitem"]:first-child {
+  border-top: none;
+  border-radius-top: 5px;
+}
+
+[role='toolbar'] [role="menu"] [role="menuitem"]:last-child {
+  border-bottom: none;
+  border-radius-bottom: 5px;
+}
+
 [role='toolbar'] [role="menu"] [role="menuitem"]:focus,
 [role='toolbar'] [role="menu"] [role="menuitem"]:hover {
 	background:rgb(226, 239, 255);
 }
 
 [role='toolbar'] [role="menu"] [role="menuitem"]:focus {
-  border-color: black;
+  border-color: #005A9C;
 }
 
