--- a/examples/toolbar/css/toolbar.css
+++ b/examples/toolbar/css/toolbar.css
@@ -3,7 +3,7 @@
 	border-radius:5px;
 	padding:.25em;
 	height: 3.25em;
-	width: 45em;
+	width: 60em;
 	background-color:#ECECEA;
 	border:2px solid transparent;
 }
@@ -22,16 +22,18 @@
 	margin-left: 0.75em;
 }
 
-[role="toolbar"] button {
+[role="toolbar"] button,
+[role="toolbar"] label,
+[role="toolbar"] a {
 	border: 2px solid rgb(255, 255, 255);
 	outline:none;
 	display: inline-block;
-	padding: 0.5em 1em;
+	padding: 0.25em 0.75em;
 	border-radius:5px;
 	text-align: center;
 	background: rgb(255, 255, 255);
 	color: #222428;
-	font-size: 16px;
+	font-size: 14px;
 	line-height: 1.5em;
 	margin-right:0.25em;
 }
