--- a/examples/toolbar/css/menuButton.css
+++ b/examples/toolbar/css/menuButton.css
@@ -31,6 +31,11 @@
   border-bottom: 1px solid transparent;
 }
 
+[role='toolbar'] [role="menu"] [role="menuitemradio"][aria-checked="true"]:before {
+  content: '>';
+}
+
+
 [role='toolbar'] [role="menu"] [role="menuitemradio"]:focus,
 [role='toolbar'] [role="menu"] [role="menuitemradio"]:hover {
 	background:rgb(226, 239, 255);
