--- a/examples/toolbar/css/menuButton.css
+++ b/examples/toolbar/css/menuButton.css
@@ -1,8 +1,8 @@
-[role='toolbar'] .menu-wrapper {
+[role='toolbar'] .menu-popup {
   position: relative;
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] {
+[role='toolbar'] .menu-popup [role="menu"] {
   padding: 0;
   width: 9.5em;
   border: 2px solid #DDD;
@@ -16,11 +16,11 @@
   z-index: 1;
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"].focus {
+[role='toolbar'] .menu-popup [role="menu"].focus {
   border-color: #005A9C;
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] li {
+[role='toolbar'] .menu-popup [role="menu"] li {
   padding: 0;
   margin: 0;
   display: block;
@@ -28,7 +28,7 @@
   list-style: none;
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] [role="menuitemradio"] {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"] {
   padding: 0;
   padding-top: 1px;
   padding-bottom: 1px;
@@ -39,16 +39,16 @@
   border-radius: 0;
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] [role="menuitemradio"]:before {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:before {
   content: url('../images/menuitemradio-unchecked.svg');
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] [role="menuitemradio"][aria-checked="true"]:before {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"][aria-checked="true"]:before {
   content: url('../images/menuitemradio-checked.svg');
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] [role="menuitemradio"]:focus,
-[role='toolbar'] .menu-wrapper [role="menu"] [role="menuitemradio"]:hover {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:focus,
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:hover {
 	background:rgb(226, 239, 255);
   border-top: 1px solid #005A9C;
   border-bottom: 1px solid #005A9C;
@@ -56,7 +56,7 @@
   padding-bottom: 0px;
 }
 
-[role='toolbar'] .menu-wrapper [role="menu"] [role="menuitemradio"]:focus {
+[role='toolbar'] .menu-popup [role="menu"] [role="menuitemradio"]:focus {
   border-color: #005A9C;
 }
 
