--- a/examples/carousel/carousel-1/css/carousel.css
+++ b/examples/carousel/carousel-1/css/carousel.css
@@ -23,7 +23,6 @@
   position: relative;
 }
 
-
 .carousel button.pause {
     display: block;
     font-size: 20px;
@@ -49,19 +48,29 @@
   right: -20px;
 }
 
+.carousel .carousel-inner .carousel-caption a {
+  text-decoration: underline;
+  border: none;
+}
+
+.carousel .carousel-inner .carousel-caption a:focus {
+  text-decoration: none;
+  outline: solid 1px #FFF;
+  outline-offset: 1px;
+}
+
 .carousel .carousel-inner .carousel-caption h2 a {
   color: #fff;
-  font-weight: 600
+  font-weight: 600;
 }
 
 .carousel .carousel-inner .carousel-caption p {
   font-size: 1em;
   line-height: 1.5;
-  margin-bottom: 0
+  margin-bottom: 0;
 }
 
 .carousel .carousel-inner .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.4);
   bottom: 0;
   left: 0;
   padding: 3% 3% 50px;
@@ -69,12 +78,16 @@
   text-shadow: none
 }
 
+.carousel:hover .carousel-inner .carousel-caption,
+.carousel .carousel-item.focus .carousel-caption {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .carousel .carousel-caption {
   position: absolute;
   right: 15%;
   bottom: 0px;
   left: 15%;
-  z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #fff;
@@ -88,44 +101,6 @@
   max-height: 400px;
 }
 
-.carousel .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 15;
-  text-align: center;
-  list-style: none;
-}
-
-.carousel [role="tab"] {
-  border: 2px solid white;
-	border-radius: 50%;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-  -webkit-box-shadow: 0 0 1px 0px rgb(255, 255, 255);
-  box-shadow: 0 0 1px 0px rgb(255, 255, 255);
-  width: 10px;
-  height: 10px;
-  z-index: 15;
-  bottom: 0;
-  margin: 0 4px;
-  display: inline-block;
-  float: left;
-  padding-right:2px;
-}
-
-.carousel [role="tab"][aria-selected="true"] {
-  background-color: white;
-  border-radius: 50%;
-}
-
-.carousel [role="tab"]:focus {
-  outline-offset: 1px;
-  outline-style: solid;
-  outline-color: white;
-  outline-width: 2px;
-}
-
 .carousel .carousel-control {
   position: absolute;
   top: 0;
@@ -137,19 +112,34 @@
   text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 
-.carousel a.carousel-control span {
+.carousel a.carousel-control svg {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
-  top: 40%;
-  font-size: 200%;
-  opacity:.70;
+  top: 45%;
+}
+
+.carousel a.carousel-control svg polygon {
+  opacity: 0.7;
+}
+
+.carousel a.carousel-control:focus {
+  outline: 3px solid #005A9C;
+}
+
+.carousel a.carousel-control:focus svg polygon {
+  opacity: 1.0;
 }
 
 .carousel a.carousel-control.previous {
   bottom: 0;
   width: 15%;
   background-image: linear-gradient(to right,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
+}
+
+.carousel a.carousel-control.previous:focus {
+  bottom: 0;
+  width: 15%;
+  background-image: linear-gradient(to right,rgba(0,0,0,.7) 0,rgba(0,0,0,.0001) 100%);
 }
 
 .carousel a.carousel-control.next {
@@ -159,19 +149,9 @@
   background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
 }
 
-.carousel a.carousel-control:focus span {
-  opacity:.99;
-}
-
-.carousel a.carousel-control:hover, a.carousel-control:focus {
-  color:#fff;
-  text-decoration:none;
-}
-
-.carousel [role="tab"][aria-selected="true"] {
-    color: white;
-}
-
-.carousel [role="tab"][aria-selected="false"] {
-  color: white;
+.carousel a.carousel-control.next:focus {
+  right: 0;
+  bottom: 0;
+  width: 15%;
+  background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.7) 100%);
 }
