--- a/examples/carousel/carousel-2/css/carousel.css
+++ b/examples/carousel/carousel-2/css/carousel.css
@@ -1,8 +1,3 @@
-.carousel img {
-  height: 100% !important;
-  width: 100% !important
-}
-
 .carousel-item { /*.carousel*/
   display: none;
   max-height: 400px;
@@ -34,6 +29,12 @@
     position: relative;
     top: 5px;
     right: -20px;
+    border: thin solid outset;
+}
+
+.carousel button[aria-pressed=true].pause {
+    border-style: inset;
+    color: #666;
 }
 
 .carousel button.pause:focus{
@@ -47,6 +48,20 @@
   position: relative;
   top: 5px;
   right: -20px;
+}
+
+
+.carousel .carousel-inner .carousel-image a {
+  display: block;
+}
+
+.carousel .carousel-inner .carousel-image a:focus {
+  border: solid 2px #005A9C;
+}
+
+.carousel .carousel-inner .carousel-image a img {
+  height: 100%;
+  width: 100%;
 }
 
 .carousel .carousel-inner .carousel-caption h2 a {
@@ -137,19 +152,35 @@
   text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 
-.carousel a.carousel-control span {
+.carousel a.carousel-control svg {
   position: relative;
   display: inline-block;
-  vertical-align: middle;
-  top: 40%;
-  font-size: 200%;
-  opacity:.70;
+  top: 45%;
+}
+
+.carousel a.carousel-control svg polygon {
+  opacity: 0.7;
+}
+
+.carousel a.carousel-control:focus {
+  border: 3px solid #FFF;
+  outline: 1px solid #005A9C;
+}
+
+.carousel a.carousel-control:focus svg polygon {
+  opacity: 1.0;
 }
 
 .carousel a.carousel-control.previous {
   bottom: 0;
   width: 15%;
   background-image: linear-gradient(to right,rgba(0,0,0,.5) 0,rgba(0,0,0,.0001) 100%);
+}
+
+.carousel a.carousel-control.previous:focus {
+  bottom: 0;
+  width: 15%;
+  background-image: linear-gradient(to right,rgba(0,0,0,.7) 0,rgba(0,0,0,.0001) 100%);
 }
 
 .carousel a.carousel-control.next {
@@ -159,19 +190,9 @@
   background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.5) 100%);
 }
 
-.carousel a.carousel-control:focus span {
-  opacity:.99;
-}
-
-.carousel a.carousel-control:hover, a.carousel-control:focus {
-  color:#fff;
-  text-decoration:none;
-}
-
-.carousel [role="tab"][aria-selected="true"] {
-    color: white;
-}
-
-.carousel [role="tab"][aria-selected="false"] {
-  color: white;
+.carousel a.carousel-control.next:focus {
+  right: 0;
+  bottom: 0;
+  width: 15%;
+  background-image: linear-gradient(to right,rgba(0,0,0,.0001) 0,rgba(0,0,0,.7) 100%);
 }
