--- a/examples/carousel/carousel-2/css/carousel.css
+++ b/examples/carousel/carousel-2/css/carousel.css
@@ -64,19 +64,29 @@
   width: 100%;
 }
 
+.carousel .carousel-inner .carousel-caption a {
+  text-decoration: underline;
+  border: none;
+}
+
+.carousel .carousel-inner .carousel-caption a:focus,
+.carousel .carousel-inner .carousel-caption a:hover {
+  outline: solid 2px #FFF;
+  outline-offset: 1px;
+}
+
 .carousel .carousel-inner .carousel-caption h2 a {
   color: #fff;
-  font-weight: 600
+  font-weight: 600;
 }
 
 .carousel .carousel-inner .carousel-caption p {
   font-size: 1em;
   line-height: 1.5;
-  margin-bottom: 0
+  margin-bottom: 0;
 }
 
 .carousel .carousel-inner .carousel-caption {
-  background-color: rgba(0, 0, 0, 0.4);
   bottom: 0;
   left: 0;
   padding: 3% 3% 50px;
@@ -84,12 +94,16 @@
   text-shadow: none
 }
 
+.carousel:hover .carousel-inner .carousel-caption,
+.carousel .carousel-item.focus .carousel-caption {
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
 .carousel .carousel-caption {
   position: absolute;
   right: 15%;
   bottom: 0px;
   left: 15%;
-  z-index: 10;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #fff;
